@@ -1,6 +1,7 @@
 return {
 	require("scripts.logistics.conveyor-merger"),
 	require("scripts.logistics.conveyor-splitter"),
+	require("scripts.logistics.splitters"),
 	require("scripts.logistics.smart-splitter"),
 	require("scripts.logistics.programmable-splitter"),
 	require("scripts.logistics.valve"),
